# up-streamer-rust

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yaml  bundled-lint-and-test.yaml  native-frame-ci.yaml  transport-smoke-capstone.yaml  unbundled-lint-and-test.yaml
configurable-streamer/: CONFIG.json5  CONFIG_LOLA_ZEROCOPY_EXAMPLE.json5  CONFIG_ZENOH_ICEORYX2_ZEROCOPY_EXAMPLE.json5  CONFIG_ZEROCOPY_EXAMPLE.json5  Cargo.toml  MW_COM_CONFIG_LOLA.json  README.md
configurable-streamer/src/: config.rs  main.rs
example-streamer-implementations/: Cargo.toml  DEFAULT_CONFIG.json5  DEFAULT_CONFIG_ZENOH_SERVICE.json5  README.md
example-streamer-implementations/vsomeip-configs/: point_to_point_zenoh_service.json
example-streamer-uses/: Cargo.toml
example-streamer-uses/src/: cli.rs  lib.rs
example-utils/example-proto/: Cargo.toml
example-utils/integration-test-utils/: Cargo.toml
example-utils/integration-test-utils/src/: integration_test_utils.rs  integration_test_uuris.rs  lib.rs  up_client_foo.rs
example_utils/example_proto/: Cargo.toml  build.rs
example_utils/example_proto/src/: lib.rs
native-frame-streamer/: Cargo.toml
native-frame-streamer/src/: lib.rs
plugins/someip-router/: Cargo.toml
plugins/zenoh-router/: Cargo.toml
plugins/zenoh-transport-router/: Cargo.toml
plugins/zenoh-transport-router/src/: lib.rs
router-plugins/plugins/transport-router-zenoh-plugin/: Cargo.toml
router-plugins/plugins/transport-router-zenoh-plugin/src/: lib.rs
router-plugins/retransmitters/retransmitter/: Cargo.toml
router-plugins/retransmitters/retransmitter-zenoh/: Cargo.toml
router-plugins/retransmitters/retransmitter-zenoh/src/: lib.rs
router-plugins/retransmitters/retransmitter/src/: lib.rs
router-plugins/router-utils/: Cargo.toml
router-plugins/zenoh-transport-router/: README.md
scripts/: bench_streamer_criterion.sh
src/ustreamer/: Cargo.toml
src/ustreamer/examples/: README.md  hello_world_rpc_client.rs  hello_world_rpc_server.rs  listen_hello_world.rs  receive_hello_world.rs  send_hello_world.rs
src/ustreamer/src/: main.rs
src/usubscription/: Cargo.toml
subscription-cache/src/: lib.rs
udiscovery/: Cargo.toml
udiscovery/src/: main.rs
up-linux-streamer/: Cargo.toml  DEFAULT_CONFIG.json5  README.md
up-linux-streamer-plugin/: Cargo.toml  README.md
up-linux-streamer-plugin/src/: lib.rs
up-linux-streamer/examples/: mE_client.rs  uE_client.rs  uE_service.rs
up-linux-streamer/src/: main.rs
up-streamer/: Cargo.toml  README.md
up-streamer/benches/: streamer_criterion.rs
up-streamer/src/: benchmark_support.rs  endpoint.rs  lib.rs  route.rs  sender_wrapper.rs  up_transport_router.rs  ustreamer.rs  utransport_builder.rs  utransport_router.rs
up-streamer/src/api/: endpoint.rs  mod.rs  streamer.rs
up-streamer/src/control_plane/: mod.rs  route_lifecycle.rs  route_table.rs  transport_identity.rs
up-streamer/src/data_plane/: egress_pool.rs  egress_worker.rs  ingress_listener.rs  ingress_registry.rs  mod.rs
up-streamer/src/observability/: fields.rs
up-streamer/src/routing/: mod.rs  publish_resolution.rs  subscription_cache.rs  subscription_directory.rs  uri_identity_key.rs
up-streamer/src/runtime/: mod.rs  subscription_runtime.rs  worker_runtime.rs
up-streamer/tests/: actual_transports.rs  api_contract_forwarding_rules.rs  native_streamer.rs  single_local_single_remote.rs  single_local_two_remote_add_remove_rules.rs  single_local_two_remote_authorities_different_remote_transport.rs  single_local_two_remote_authorities_same_remote_transport.rs  usubscription.rs
up-streamer/tests/support/: mod.rs
ustreamer/: Cargo.toml
ustreamer-example/: Cargo.toml
ustreamer-example/src/: main.rs  someipstanding_transport_builder.rs  zenoh_transport_builder.rs
ustreamer-pluggable/: Cargo.toml
ustreamer-pluggable/src/: lib.rs  ustreamer.rs
ustreamer-previous/: README.md
ustreamer-previous-1/: Cargo.toml
ustreamer-previous-1/src/: config.rs  egress_router.rs  hashable_items.rs  ingress_router.rs  utransport_builder.rs
ustreamer-previous-2/examples/: check_zenoh_keyexpr.rs  mdevice_receive_timer.rs  uapp_send_timer.rs
ustreamer-previous/examples/: mdevice_send_timer.rs  uapp_hello_world_rpc_server.rs
ustreamer-transport-builders/: Cargo.toml
ustreamer-transport-builders/src/: lib.rs
ustreamer/examples/: README.md  basic_rpc_client.rs  basic_rpc_server.rs  hello_world_mdevice.rs  hello_world_rpc_client.rs  hello_world_rpc_server.rs  mdevice_hello_world_client.rs  mdevice_hello_world_server.rs  mdevice_send_timer.rs  receive_timer.rs  send_timer.rs  send_timer_mdevice.rs  temp_main.rs  uapp_hello_world_rpc_client.rs  uapp_hello_world_rpc_server.rs  uapp_send_timer.rs
ustreamer/plugins/egress_router/: Cargo.toml
ustreamer/plugins/egress_router/src/: lib.rs
ustreamer/plugins/ingress_router/: Cargo.toml
ustreamer/plugins/ingress_router/src/: lib.rs
ustreamer/src/: config.rs  egress_router.rs  errors.rs  hashable_items.rs  hashable_uathority.rs  ingress_router.rs  lib.rs  main.rs  router.rs  streamer_router.rs  transport_builder.rs  ustreamer.rs  ustreamer_error.rs  utransport_builder.rs  utransport_plugin.rs  utransport_router.rs
ustreamer/src/plugins/: egress_router.rs  ingress_router.rs  mod.rs  streamer_plugin.rs  types.rs  up_client_full.rs  up_client_full_factories.rs  up_client_transport.rs  up_client_transport_factories.rs  utransport_plugin.rs
ustreamer/src/routers/: utransport_plugin.rs
ustreamer/src/transport_builders/: android_transport_builder.rs  binder_transport_builder.rs  mod.rs  transport_builder.rs  zenoh_transport_builder.rs
ustreamer_basic/: Cargo.toml  README.md
ustreamer_basic/examples/: README.md  cloud_send_timer.rs  mdevice_hello_world_client.rs  mdevice_receive_timer.rs  mdevice_send_timer.rs  uapp_hello_world_rpc_client.rs  uapp_hello_world_rpc_server.rs  uapp_send_timer.rs
usubscription/: Cargo.toml
utils/hello-world-protos/: build.rs
utils/transport-smoke-suite/: Cargo.toml
utils/usubscription-static-file/: Cargo.toml
utwin/: Cargo.toml
(+26 files in other folders)
