# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "example-utils/example-proto",
    "router-plugins/plugins/transport-router-zenoh-plugin",
    "router-plugins/plugins/transport-router-someip-plugin",
    "router-plugins/retransmitters/retransmitter",
    "router-plugins/retransmitters/retransmitter-zenoh",
    "router-plugins/router-utils",
    "ustreamer",
    "udiscovery",
    "usubscription",
    "utwin",
]

[workspace.package]
rust-version = "1.66.1"
version = "0.1.5-SNAPSHOT" # uProtocol version
repository = "https://github.com/eclipse-uprotocol/uprotocol-platform-linux-zenoh"
homepage = "https://github.com/eclipse-uprotocol"
authors = [
    "Pete LeVasseur <plevasseur@gmail.com>",
]
edition = "2021"
keywords = ["uProtocol", "SDK"]
license = "Apache-2.0"

[workspace.dependencies]
async-std = "1.12.0"
async-trait = "0.1"
clap = "4.4.16"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
prost = "0.12"
prost-types = "0.12"
retransmitter = { version = "0.1.5-SNAPSHOT", path = "router-plugins/retransmitters/retransmitter" }
retransmitter-zenoh = { version = "0.1.5-SNAPSHOT", path = "router-plugins/retransmitters/retransmitter-zenoh" }
serde_json = "1.0.111"
transport-router-zenoh-plugin = { version = "0.1.5-SNAPSHOT", path = "router-plugins/plugins/transport-router-zenoh-plugin" }
# upstream
# uprotocol-sdk = { git = "https://github.com/eclipse-uprotocol/uprotocol-rust.git", branch = "main" }
# zettascale version
uprotocol-sdk = { git = "https://github.com/ZettaScaleLabs/uprotocol-rust.git", branch = "support_rpcserver" }
# upstream
# uprotocol_zenoh_rust = { git = "https://github.com/ZettaScaleLabs/uprotocol-rust-ulink-zenoh.git", branch = "support_rpcserver" }
# my version, increasing timeout to 2 seconds
uprotocol_zenoh_rust = { git = "https://github.com/PLeVasseur/uprotocol-rust-ulink-zenoh_zettascale.git", branch = "feature/update_timeout" }
zenoh = { version = "0.10.1-rc", features = ["unstable"] }
zenoh-core = { version = "0.10.1-rc"  }
zenoh-plugin-trait = { version = "0.10.1-rc" }
zenoh-result = { version = "0.10.1-rc" }
zenoh-util = { version = "0.10.1-rc" }

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
