# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "example-utils/example-proto",
    "ustreamer",
    # "ustreamer-previous",
]

[workspace.package]
rust-version = "1.66.1"
version = "0.1.5-SNAPSHOT" # uProtocol version
repository = "https://github.com/eclipse-uprotocol/uprotocol-platform-linux-zenoh"
homepage = "https://github.com/eclipse-uprotocol"
authors = [
    "Pete LeVasseur <plevasseur@gmail.com>",
]
edition = "2021"
keywords = ["uProtocol", "SDK"]
license = "Apache-2.0"

[workspace.dependencies]
async-std = "1.12.0"
async-trait = "0.1"
clap = "4.4.16"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
lru = "0.12.1"
prost = "0.12"
prost-types = "0.12"
serde_json = "1.0.111"
strum = { version = "0.25", features = ["derive"] }
uuid = "1.7.0"
zenoh = { version = "0.10.1-rc", features = ["unstable"] }
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "68c8a1d94f0006daf4ba135c9cbbfddcd793108d" }
up-client-zenoh-rust = { package = "uprotocol_zenoh", git = "https://github.com/eclipse-uprotocol/up-client-zenoh-rust", branch = "main" }

# upstream
# uprotocol-sdk = { git = "https://github.com/eclipse-uprotocol/uprotocol-rust.git", branch = "main" }
# zettascale version
#uprotocol-sdk = { git = "https://github.com/ZettaScaleLabs/uprotocol-rust.git", branch = "support_rpcserver" }
# Pete one
# uprotocol-sdk = { git = "https://github.com/PLeVasseur/uprotocol-rust_fork.git", branch = "feature/turn_send_sync_back_off" }
# upstream
# uprotocol_zenoh_rust = { git = "https://github.com/ZettaScaleLabs/uprotocol-rust-ulink-zenoh.git", branch = "support_rpcserver" }
# my version, increasing timeout to 2 seconds
# uprotocol-rust-transport-sommr = { git = "https://github.com/PLeVasseur/uprotocol-rust-ulink-zenoh_zettascale.git", branch = "feature/stand-in_for_uprotocol-rust-transport-sommr" }
# uprotocol-rust-transport-mqtt = { git = "https://github.com/PLeVasseur/uprotocol-rust-ulink-zenoh_zettascale.git", branch = "feature/stand-in_for_uprotocol-rust-transport-mqtt" }
# uprotocol_zenoh_rust = { git = "https://github.com/PLeVasseur/uprotocol-rust-ulink-zenoh_zettascale.git", branch = "feature/update_timeout" }

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
