# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "configurable-streamer"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[features]
default = []
mqtt-transport = ["dep:up-transport-mqtt5"]
vsomeip-transport = ["dep:up-transport-vsomeip"]
bundled-vsomeip = ["up-transport-vsomeip/bundled"]

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
json5 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
up-rust = { workspace = true, features = ["protobuf-wire"] }
up-streamer = { path = "../up-streamer" }
up-transport-iceoryx2-rust = { workspace = true }
up-transport-mqtt5 = { workspace = true, optional = true }
up-transport-vsomeip = { workspace = true, optional = true }
up-transport-zenoh = { workspace = true }
usubscription-static-file = { path = "../utils/usubscription-static-file" }
