# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "up-linux-streamer"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[[bin]]
name = "zenoh_someip"

[features]
default = []
zenoh-transport = []
vsomeip-transport = []
bundled-vsomeip = []

[dependencies]
async-trait = { workspace = true }
clap = { version = "4.5.9", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
json5 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
up-rust = { workspace = true }
up-streamer = { path = "../up-streamer" }
up-transport-iceoryx2-rust = { workspace = true }
up-transport-zenoh = { workspace = true }
usubscription-static-file = { path = "../utils/usubscription-static-file" }
