# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "example-streamer-uses"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[[bin]]
name = "someip_client"

[[bin]]
name = "someip_publisher"

[[bin]]
name = "someip_service"

[[bin]]
name = "someip_subscriber"

[[bin]]
name = "zenoh_client"

[[bin]]
name = "zenoh_publisher"

[[bin]]
name = "zenoh_service"

[[bin]]
name = "zenoh_subscriber"

[[bin]]
name = "mqtt_client"

[[bin]]
name = "mqtt_publisher"

[[bin]]
name = "mqtt_service"

[[bin]]
name = "mqtt_subscriber"

[features]
default = []
zenoh-transport = ["dep:up-transport-zenoh"]
vsomeip-transport = ["dep:up-transport-vsomeip"]
bundled-vsomeip = ["up-transport-vsomeip/bundled"]
mqtt-transport = ["dep:up-transport-mqtt5"]

[dependencies]
async-trait = { workspace = true }
clap = { version = "4.5.9", features = ["derive"] }
json5 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
up-rust = { workspace = true }
up-transport-mqtt5 = { workspace = true, optional = true }
up-transport-vsomeip = { workspace = true, optional = true }
up-transport-zenoh = { workspace = true, optional = true }
zenoh = { workspace = true }
