[package]
name = "native-frame-streamer"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
up-rust = { path = "/home/pete.levasseur/eclipse/uprotocol/up-rust" }
