[package]
name = "up-linux-streamer-plugin"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[features]
default = ["dynamic_plugin", "zenoh/default", "zenoh/unstable", "zenoh/plugins"]
dynamic_plugin = []

[lib]
# When auto-detecting the "example" plugin, `zenohd` will look for a dynamic library named "zenoh_plugin_example"
# `zenohd` will expect the file to be named according to OS conventions:
#   - libzenoh_plugin_example.so on linux
#   - libzenoh_plugin_example.dylib on macOS
#   - zenoh_plugin_example.dll on Windows
name = "zenoh_plugin_up_linux_streamer"
# This crate type will make `cargo` output a dynamic library instead of a rust static library
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.35.1", default-features = false }
up-streamer = { path = "../up-streamer" }
async-std = { version = "=1.12.0", default-features = false }
const_format = "0.2.30"
futures = { version = "0.3.25" }
git-version = { version = "0.3.5" }
tracing = { version = "0.1" }
serde_json = { version = "1.0.94" }
zenoh = { version = "0.11.0-rc.3", features = ["unstable"] }
zenoh-core = { version = "0.11.0-rc.3" }
zenoh-plugin-trait = { version = "0.11.0-rc.3" }
zenoh-result = { version = "0.11.0-rc.3" }
zenoh-util = { version = "0.11.0-rc.3" }
zenoh_backend_traits = { version = "0.11.0-rc.3" }
env_logger = "0.10.2"
