[package]
name = "up-linux-streamer"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
up-rust = { workspace = true }
up-transport-zenoh = { git = "https://github.com/eclipse-uprotocol/up-transport-zenoh-rust.git", rev = "7c839e7a94f526a82027564a609f48a79a3f4eae" }
up-transport-vsomeip = { git = "https://github.com/PLeVasseur/up-client-vsomeip-rust.git", branch = "feature/up-transport-vsomeip-rust_initial-implementation" }
#up-transport-vsomeip = { git = "https://github.com/eclipse-uprotocol/up-transport-vsomeip-rust.git", rev = "" }
up-streamer = { path = "../up-streamer" }
serde = { workspace = true }
zenoh = { version = "0.11.0-rc.3", features = ["unstable"]}
env_logger = { version = "0.10.2" }
log = { workspace = true }
async-trait = { workspace = true }
protobuf = { workspace = true }

[dev-dependencies]
hello-world-protos = { path = "../example-utils/hello-world-protos" }
