[package]
name = "ustreamer-example"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
prost = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
zenoh = { workspace = true }
serde_json = { workspace = true }
up-rust = { workspace = true }
ustreamer = { path = "../ustreamer" }

up-client-zenoh = { git = "https://github.com/PLeVasseur/up-client-zenoh-rust.git", branch = "feature/zenoh-transport-builder" }
up-client-someipstandin = { git = "https://github.com/PLeVasseur/up-client-zenoh-rust.git", branch = "feature/dummy-someip-standin" }

[dev-dependencies]
example-proto = { path = "../example-utils/example-proto" }
chrono = { version = "0.4.31", features = [] }
