# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
rust-version = { workspace = true }
name = "ustreamer"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
async-std = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
uprotocol-sdk = { workspace = true }
uprotocol_zenoh_rust = { workspace = true }
zenoh = { workspace = true }
transport-router-zenoh-plugin = { workspace = true }
zenoh-plugin-trait = { workspace = true }

[dev-dependencies]
example-proto = { path = "../example-utils/example-proto" }
chrono = { version = "0.4.31", features = [] }
