[package]
name = "ustreamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uprotocol-sdk = { git = "https://github.com/ZettaScaleLabs/uprotocol-rust.git", branch = "support_rpcserver" }
zenoh = { version = "0.10.1-rc", features = ["unstable"]}
uprotocol_zenoh_rust = { git = "https://github.com/ZettaScaleLabs/uprotocol-rust-ulink-zenoh.git", branch = "support_rpcserver" }
async-std = "1.12.0"
#tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
example-proto = { path = "../../example-utils/example-proto"}