[package]
name = "ustreamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uprotocol-sdk = { git = "https://github.com/ZettaScaleLabs/uprotocol-rust.git", branch = "support_rpcserver" }
zenoh = { version = "0.10.1-rc", features = ["unstable"]}
# upstream
# uprotocol_zenoh_rust = { git = "https://github.com/ZettaScaleLabs/uprotocol-rust-ulink-zenoh.git", branch = "support_rpcserver" }
# my version, increasing timeout to 2 seconds
uprotocol_zenoh_rust = { git = "https://github.com/PLeVasseur/uprotocol-rust-ulink-zenoh_zettascale.git", branch = "feature/update_timeout" }
async-std = "1.12.0"
prost = "0.12.3"
env_logger = "0.10.1"

[dev-dependencies]
example-proto = { path = "../../example-utils/example-proto"}
chrono = { version = "0.4.31", features = [] }
