[package]
name = "egress_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
uprotocol-sdk = { workspace = true }
uprotocol-rust-transport-mqtt = { workspace = true }
uprotocol-rust-transport-sommr = { workspace = true }
uprotocol_zenoh_rust = { workspace = true }
transport-router-zenoh-plugin = { workspace = true }
zenoh = { workspace = true }
zenoh-core = { workspace = true }
zenoh-plugin-trait = { workspace = true }
zenoh-result = { workspace = true }
zenoh-util = { workspace = true }
